removed attachment fixed on mobile, cuz work not correctly

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -13,5 +13,5 @@
 	background-image: $blue-gradient, url($bgImg);
 	background-size: cover;
 	background-position: center;
-	background-attachment: fixed;
+	background-attachment: scroll;
 }
